Tonka Drive Code

--- a/TonkaDriveCode2.yaml
+++ b/TonkaDriveCode2.yaml
@@ -250,4 +250,4 @@ Properties:
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Autonomous Command}
 Base: Robot
-Name: TonkaDriveCode2
+Name: DriveCodeForTonka
